Fixing 100% width without overflow

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,8 @@
 .container {
   margin: 0;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
+  max-width: 100%;
   position: absolute;
   display: flex;
   flex-direction: column;
